--- a/src/darkAsset/assets/sass/_individual.scss
+++ b/src/darkAsset/assets/sass/_individual.scss
@@ -126,7 +126,7 @@
 
             li {
                 display: inline-block;
-                width: 12%;
+                width: 13%;
                 text-align: center;
                 font-size: 14px;
                 line-height: 26px;
@@ -137,7 +137,7 @@
 
 
             .two {
-                width: 35%;
+                width: 45%;
             }
 
             .six {
@@ -170,13 +170,14 @@
 
                 li {
                     display: inline-block;
-                    width: 12%;
+                    width: 13%;
                     text-align: center;
                     font-size: 14px;
                     line-height: 26px;
                     color: #fff;
                     font-weight: normal;
                     padding: 40px 0;
+                    word-break: break-all;
                 }
 
                 .four {
@@ -185,7 +186,7 @@
 
 
                 .two {
-                    width: 35%;
+                    width: 45%;
                 }
 
                 .six {
@@ -348,7 +349,7 @@
 
             li {
                 display: inline-block;
-                width: 23%;
+                width: 33%;
                 text-align: center;
                 font-size: 14px;
                 line-height: 26px;
